# json2xml

./: .gitignore  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
json2xml/: __init__.py
src/: __init__.py  main.py
src/json2xml/: __init__.py
tests/: test_json_to_xml.py
