[metadata]
name = json2xml
version = 0.1
license = MIT
description = convert json to xml
url = https://github.com/zarinpy/json2xml
author = zarinpy
author_email =
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
